[package]
name = "pubsub"
version = "0.1.0"
authors = ["Minioin <minioin@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.105", features = ["derive"] }
serde_cbor = "0.11.1"
crossbeam = "0.7.3"
net2 = "0.2.33"
